<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:orientation="vertical"
    android:paddingTop="10dp"
    android:paddingRight="20dp"
    android:paddingLeft="20dp"
    android:background="@drawable/predict_background">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/btn_take_photo"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:scaleType="fitXY"
                    android:src="@drawable/take_photo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/predict_camera"
                    android:textColor="#000"
                    android:textSize="14dp" />
            </LinearLayout>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/btn_open_gallery"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:scaleType="fitXY"
                    android:src="@drawable/open_gallery" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/predict_gallery"
                    android:textColor="#000"
                    android:textSize="14dp" />
            </LinearLayout>
    </RelativeLayout>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="310dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:padding="2dp"
        app:cardCornerRadius="15dp">
        <ImageView
            android:id="@+id/img_disease"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="#89B9C8"
            android:scaleType="fitXY"
            android:src="@drawable/logo" />

    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_predict"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:background="@drawable/custom_button"
        android:text="@string/btn_predict"
        android:textSize="18dp"
        android:textColor="#000"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_disease_name"
        android:gravity="center"
        android:textSize="18dp"
        android:textStyle="bold"
        android:textColor="#000"
        android:layout_marginTop="5dp"
        android:id="@+id/tv_disease_name"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_probabilities"
        android:gravity="center"
        android:textSize="15sp"
        android:textColor="#000"
        android:id="@+id/tv_confident_percent"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/layout_solution">

    </LinearLayout>

</LinearLayout>