<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SolutionFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/tv_solution_name_EN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tomato Late Blight"
            android:textSize="25dp"
            android:textColor="#000"
            android:textStyle="bold"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/tv_solution_name_VN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Benh chay la ca chua"
            android:textSize="20dp"
            android:textColor="#000"
            android:textStyle="bold"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/img_1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="@android:color/transparent"
                        android:scaleType="fitXY"
                        android:src="@drawable/take_photo"
                        android:layout_marginRight="3dp"/>
                </LinearLayout>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/img_2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="@android:color/transparent"
                        android:scaleType="fitXY"
                        android:src="@drawable/take_photo"
                        android:layout_marginLeft="3dp"/>
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/img_3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="@android:color/transparent"
                        android:scaleType="fitXY"
                        android:src="@drawable/take_photo"
                        android:layout_marginRight="3dp"/>
                </LinearLayout>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/img_4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="@android:color/transparent"
                        android:scaleType="fitXY"
                        android:src="@drawable/take_photo"
                        android:layout_marginLeft="3dp"/>
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_symptom"
            android:textSize="25dp"
            android:textColor="#000"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/tv_symptom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_symptom"
            android:textSize="14sp"
            android:layout_marginLeft="10dp"
            android:textColor="#000"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_pathogen"
            android:textSize="25dp"
            android:textColor="#000"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/tv_pathogen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_symptom"
            android:textSize="14sp"
            android:layout_marginLeft="10dp"
            android:textColor="#000"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_howtocure"
            android:textSize="25dp"
            android:textColor="#000"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/tv_howtocure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_symptom"
            android:textSize="14sp"
            android:layout_marginLeft="10dp"
            android:textColor="#000"/>

    </LinearLayout>

</ScrollView>